--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^3.10.1
   firebase_auth: ^5.4.1
   firebase_messaging: ^15.2.1   
+  mobile_scanner: ^6.0.5
 
 dev_dependencies:
   flutter_test:
