--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_auth: ^5.4.1
   firebase_messaging: ^15.2.1   
   mobile_scanner: ^6.0.5
+  sqflite: ^2.0.0+4 
+  path_provider: ^2.0.11
+  path: ^1.8.1
 
 dev_dependencies:
   flutter_test:
