--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   sqflite: ^2.0.0+4 
   path_provider: ^2.0.11
   path: ^1.8.1
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
