--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,10 +63,12 @@ flutter:
 
   # Add this assets section
   assets:
-    - assets/chill.jpg
+    - assets/chill.jpg  
     - assets/ads1.jpeg
     - assets/ads2.jpeg
     - assets/ads3.png
+    - assets/ad4.png
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
