--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
     - assets/ads2.jpeg
     - assets/ads3.png
     - assets/ad4.png
+    - assets/sp.jpeg
 
 
   # To add assets to your application, add an assets section, like this:
