--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   intl: ^0.20.2
   qr_flutter: ^4.1.0
   shared_preferences: ^2.2.2
+  cloud_firestore: ^5.6.2
 
 dev_dependencies:
   flutter_test:
